<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".activities.MainActivity" >

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="1" >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical" >

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp"
                android:layout_marginLeft="20dp"
                android:layout_marginRight="20dp"
                android:layout_marginTop="20dp" >

                <ImageView
                    android:id="@+id/image_view_nueva_compra"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:src="@android:drawable/ic_menu_add" />

                <Button
                    android:id="@+id/button_nueva_venta"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/nuevo_pedido" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp"
                android:layout_marginLeft="20dp"
                android:layout_marginRight="20dp"
                android:layout_marginTop="10dp" >

                <ImageView
                    android:id="@+id/image_view_localizar_cliente"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:src="@android:drawable/ic_menu_mylocation" />

                <Button
                    android:id="@+id/button_geolocalizar_cliente"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/geolocalizar_cliente" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp"
                android:layout_marginLeft="20dp"
                android:layout_marginRight="20dp"
                android:layout_marginTop="10dp" >

                <ImageView
                    android:id="@+id/image_view_fotografiar_cliente"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:src="@android:drawable/ic_menu_camera" />

                <Button
                    android:id="@+id/button_fotografiar_cliente"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/fotografiar_cliente" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp"
                android:layout_marginLeft="20dp"
                android:layout_marginRight="20dp"
                android:layout_marginTop="10dp" >

                <ImageView
                    android:id="@+id/image_view_ver_ubicacion_cliente"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:src="@android:drawable/ic_menu_view" />

                <Button
                    android:id="@+id/button_ver_ubicacion_cliente"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/ver_ubicacion_cliente" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="20dp"
                android:layout_marginLeft="20dp"
                android:layout_marginRight="20dp"
                android:layout_marginTop="10dp" >

                <ImageView
                    android:id="@+id/image_view_fotografia_cliente"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:src="@android:drawable/ic_menu_gallery" />

                <Button
                    android:id="@+id/button_ver_fotografia_cliente"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/ver_fotografia_cliente" />
            </LinearLayout>
        </LinearLayout>
    </ScrollView>
</LinearLayout>